@@ -7,7 +7,7 @@
 
 #define CXX                 "g++"
 
-#define CXXFLAGS            "--std=c++14 " ${THREAD} " -Wall -O2"
+#define CXXFLAGS            "--std=c++17 " ${THREAD} " -Wall -O2"
 // see pf_iterator/icmconf for an example using -system
 
 #define SOURCES             "*.cc"
