@@ -1,3 +1,8 @@
+bobcat (4.09.00)        WIP
+
+  * Compilation requires c++17
+
+
 bobcat (4.08.02)
 
   * CSV4180 supports configurable field separator characters.
